2010-09-20  Peter Rosin  <peda@lysator.liu.se>

	tests: __declspec (dll{ex,im}port) in tests/exceptions.at
	* tests/exceptions.at (common.h, module.h, lib.h) [w32]: Use
	__declspec (dllimport) and __declspec (dllexport) instead of
	the less portable __attribute__ ((dllimport)) and
	__attribute__ ((dllexport)).  Makes the test compile on MSVC.

2010-09-19  Peter Rosin  <peda@lysator.liu.se>

	tests: Import items from liba1 for MSVC.
	* tests/lt_dlexit.at (b1.c) [MSVC]: Import function f1 and
	variable v1 from liba1 when using them from modb1.  Makes the
	test pass on MSVC.

2010-09-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	tests: avoid distcheck failure with --disable-ltdl-install.
	* tests/ltdl-libdir.at (libdir of installed modules): Skip if
	$LIBLTDL does not exist.

2010-09-18  Gary V. Vaughan  <gary@gnu.org>

	maint: use sed instead of maintaining 2 README files.
	* README.alpha: Deleted.  It was mostly identical to README.
	* libltdl/config/edit-readme-alpha: New script to edit the
	contents of README in the dist tree prior to tarring up.
	* Makefile.am (dist-hook): Run it before rolling alpha release
	tarball.

	maint: improve README's `Obtaining the Latest Sources'.
	* README (Obtaining the Latest Sources): Add instructions for
	obtaining stable, alpha and nightly snapshot tarballs.
	* README.alpha (Obtaining the Latest Sources): Adjust to match.

	maint: reformat README `The Test Suites' for consistency.
	* README (The Test Suites): Reformatted for consistency.
	* README.alpha (The Test Suites): Adjust to match.

	maint: improve `Reporting Bugs' in README and README.alpha.
	* README (Reporting Bugs): Rewritten to a more complete and
	concise guide to providing a good bug report.
	* README.alpha (Reporting Bugs): Adjust to match.

	maint: consolidate Introductions of README and README.alpha.
	* README (Introduction): Rewritten to a more logical order for
	first time users, incorporating some additional text that was
	previously only in README.alpha.