@@ -102,10 +102,11 @@ LT_SCOPE int	lt_dlpreload_open    (const char *originator,
 				      lt_dlpreload_callback_func *func);
 
 #define lt_preloaded_symbols	lt__PROGRAM__LTX_preloaded_symbols
-#define LTDL_SET_PRELOADED_SYMBOLS() 			LT_STMT_START{	\
-	extern LT_DLSYM_CONST lt_dlsymlist lt_preloaded_symbols[];	\
-	lt_dlpreload_default(lt_preloaded_symbols);			\
-							}LT_STMT_END
+/* Ensure C linkage.  */
+extern LT_DLSYM_CONST lt_dlsymlist lt__PROGRAM__LTX_preloaded_symbols[];
+
+#define LTDL_SET_PRELOADED_SYMBOLS() \
+	lt_dlpreload_default(lt_preloaded_symbols)
 
 
 
